# sovereign-engine

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SECURITY_ASSESSMENT.md  docker-compose.runtime.yml  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  RESERVATIONS.md  THREAT_MODEL.md  USER_GUIDE.md
docs/decisions/: 001-llamacpp-over-vllm.md  002-portal-subpath.md  003-model-host-path.md  (+23 more)
live/: docker-compose.yml
proxy/: Cargo.toml
proxy/examples/: anthropic_proxy.rs  queue_demo.rs
proxy/migrations/: 20260212000000_initial.sql  20260212000001_pkce_verifier.sql  20260212000002_container_secrets.sql  20260213000000_internal_tokens.sql  20260213000001_context_length.sql  20260213000002_remove_vllm.sql  20260213000003_gguf_metadata.sql  20260213100000_parallel_slots.sql  20260213100001_settings.sql  20260215000000_reservations.sql  20260215000001_meta_tokens.sql  20260218000000_token_soft_delete.sql  20260407000000_attention_dims.sql  20260423000000_model_runtime_overrides.sql  20260423000001_swa_kv_aggregates.sql
proxy/src/: admin_tests.rs  config.rs  main.rs  meta_token_tests.rs  metrics.rs  reservation_tests.rs  tls.rs
proxy/src/api/: admin.rs  anthropic.rs  common.rs  error.rs  hf.rs  mod.rs  openai.rs  reservation.rs  user.rs
proxy/src/auth/: bootstrap.rs  mod.rs  oidc.rs  sessions.rs  tokens.rs
proxy/src/db/: crypto.rs  mod.rs  models.rs
proxy/src/docker/: llamacpp.rs  mod.rs  runtime_overrides.rs
proxy/src/proxy/: mod.rs  streaming.rs  webui.rs
proxy/src/scheduler/: fairness.rs  gate.rs  mod.rs  queue.rs  reservation.rs  resolver.rs  settings.rs  usage.rs
proxy/tests/: test_anthropic_endpoint.py
scripts/: generate-dev-certs.sh
tests/: test_reservations.sh
ui/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+45 files in other folders)
