[package]
name = "sovereign-engine"
version = "1.0.0"
edition = "2021"
description = "Self-contained local AI inference platform"
license = "Apache-2.0"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "compression-gzip"] }
hyper = { version = "1", features = ["http1", "client"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# TLS
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls-acme = { version = "0.15", features = ["axum"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }

# Docker
bollard = "0.20"

# Auth
openidconnect = "4"

# HTTP client (for proxying + HuggingFace API)
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.10", features = ["thread_rng", "std_rng"] }
base64 = "0.22"
sha2 = "0.10"
hkdf = "0.12"
subtle = "2"
aes-gcm = "0.10"
hex = "0.4"
dotenvy = "0.15"
futures = "0.3"
bytes = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

[features]
demo = []

[dev-dependencies]
ratatui = "0.29"
crossterm = "0.28"

[[example]]
name = "queue_demo"
required-features = ["demo"]
